@@ -4,3 +4,6 @@
 /* Define if you have the gd version 1.3 library (-lgd). */
 #define HAVE_LIBGD13 0
 
+#undef FREETYPE_4BIT_ANTIALIAS_HACK
+#undef HAVE_LIBFREETYPE
+#undef HAVE_LIBTTF
